Show cursor:pointer on things that toggle expand/collapse of resolved topics
Bug: T131658

--- a/modules/styles/board/moderated.less
+++ b/modules/styles/board/moderated.less
@@ -20,4 +20,8 @@
 	.flow-element-collapsed .flow-post {
 		display: none;
 	}
+
+	.flow-collapse-toggle {
+		cursor: pointer;
+	}
 }
